# kyopro

./: .editorconfig  .gitignore  .rubocop.yml  Cargo.toml  Gemfile  Makefile  README.md  acac.toml  command-history.txt  cspell.json  package.json  pnpm-lock.yaml  pyproject.toml
algo-method.com/: cspell.yaml
algo-method.com/tasks/1011/: main.py  metadata.toml
algo-method.com/tasks/1012/: main.py  metadata.toml
algo-method.com/tasks/1013/: main.py  metadata.toml
algo-method.com/tasks/1014/: main.py  metadata.toml
algo-method.com/tasks/1015/: main.py  metadata.toml
algo-method.com/tasks/1055/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1056/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1057/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1058/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1060/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1061/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1062/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1063/: main.cpp  main.py  main.ts  metadata.toml
algo-method.com/tasks/1064/: main.cpp  main.hs  main.py  main.ts  metadata.toml
algo-method.com/tasks/1065/: main.py  metadata.toml  short.py
algo-method.com/tasks/1066/: main.py  metadata.toml
algo-method.com/tasks/1067/: main.cpp  main.py  main.ts  (+1 more)
scripts/: prepare_atcoder.py
src/: int.rs  lib.rs  main.rs  samples.rs  string.rs
templates/: main.bash  main.cpp  main.go  main.hs  main.py  main.rb  main.ts  main.zsh
(+2242 files in other folders)
