[tool.poetry]
name = "kyopro"
version = "0.1.0"
description = ""
authors = ["seijinrosen <86702775+seijinrosen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"

[tool.poetry.group.dev.dependencies]
acac = "^0.1.0"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
