[tool.poetry]
name = "kyopro"
version = "0.1.0"
description = ""
authors = ["seijinrosen <86702775+seijinrosen@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
more-itertools = "^9.0.0"

[tool.poetry.group.dev.dependencies]
acac = "^0.2.0"
bandit = "^1.7.4"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
